# crypto12381

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  algebra_test.cpp  colored_print.hpp  example_ps.cpp  test.cpp
examples/: CMakeLists.txt
examples/AC-bbs/: CMakeLists.txt  test.cpp
examples/AC-bbs/include/: AC-bbs.hpp
examples/AC-bbs/src/: generate_attributes.cpp  issue.cpp  keygen.cpp  pres.cpp  verify.cpp
examples/AC-rbbs/: CMakeLists.txt  test.cpp
examples/AC-rbbs/include/: AC-rbbs.hpp
examples/AC-rbbs/src/: generate_attributes.cpp  issue.cpp  keygen.cpp  pres.cpp  redact.cpp  verify.cpp
examples/AC-rps/: CMakeLists.txt  test.cpp
examples/AC-rps/include/: AC-rps.hpp
examples/AC-rps/src/: generate_attributes.cpp  issue.cpp  keygen.cpp  pres.cpp  redact.cpp  verify.cpp
examples/MHAC-bbs/: CMakeLists.txt  test.cpp
examples/MHAC-bbs/include/: bbs.hpp  mhac_bbs.hpp
examples/MHAC-bbs/src/: bbs.cpp  cred_iss.cpp  cred_pres.cpp  generate_attributes.cpp  iss_setup.cpp  make_pres_group.cpp  make_pres_type.cpp  mhac_bbs.cpp  verify_pres.cpp
examples/bbs/: CmakeLists.txt  test.cpp
examples/bbs-plus/: CmakeLists.txt  test.cpp
examples/bbs-plus/include/: bbs+.hpp
examples/bbs-plus/src/: bbs+.cpp
examples/bbs04/: CmakeLists.txt  test.cpp
examples/ps/: test.cpp
examples/shamir-secret-sharing/: CMakeLists.txt  test.cpp
include/crypto12381/: algebra.hpp  chunk_range.hpp  constant.hpp  crypto12381.hpp  data_access.hpp  g1_point.hpp  g2_point.hpp  general.hpp  interface.hpp  liner_pair.hpp  miracl_core_interface.hpp  random.hpp  ranges.hpp  set.hpp  zp_number.hpp
src/: miracl_core_interface.cpp  random.cpp
tests/ps/: CMakeLists.txt  test.cpp
(+10 files in other folders)
